--- a/server/.env.development
+++ b/server/.env.development
@@ -2,3 +2,4 @@
 ENV = DEVELOPMENT
 PORT = SOME_PORT_NUMBER
 JWT_SECRET = SOME_SECRET_FOR_JWT_ENCRYPTION
+DATABASE_URL = DATABASE_URL_OF_POSTGRES_INSTANCE
